Improve accessibility with role and aria label attributes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -81,12 +81,10 @@ const markVar = `url(${mark})`;
             </a>
           </div>
         </div>
-        <div class="athlete-img-container">
-          
-        </div>
+        <div class="athlete-img-container" role="img" aria-label="Amity climbing high above the Valley floor on El Corazon"></div>
       </div>
     </div>
-    <div class="bg-img1"></div>
+    <div class="bg-img1" role="img" aria-label="Amity in the thin-crack crux of Mark of the Beast in Yosemite, CA"></div>
     <div class="home-dietician-wrapper">
       <div class="home-dietician-content">
         <div class="dietician-content-simple">
@@ -105,10 +103,10 @@ const markVar = `url(${mark})`;
             </a>
           </div>
         </div>
-        <div class="dietician-img-container"></div>
+        <div class="dietician-img-container" role="img" aria-label="Amity grinning while climbing Mark of the Beast in Yosemite, CA"></div>
       </div>
     </div>
-    <div class="bg-img2"></div>
+    <div class="bg-img2" role="img" aria-label="Amity climbing in Turkey Rocks, CO with a stunning sunset"></div>
   </div>
 </BaseLayout>
 <style define:vars={{psychoVar, turkeyVar, arrowVar, corazonVar, markVar}}>
