--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -3,9 +3,14 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 
 const allPosts = await Astro.glob('../posts/*.mdx');
 const uniqueTags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
+
+const pageInfo = {
+  title: 'Tags Index',
+  description: `Search Amity's blog content by keywords, including: big wall, Yosemite, El Capitan, fueling, nutrition, and more.`
+}
 ---
 
-<BaseLayout pageTitle="Tags Index">
+<BaseLayout page={pageInfo}>
   <h4>Find the tag you'd like to explore!</h4>
   <div class="tag-index-container">
     {uniqueTags.map((tag) => (
