--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -15,6 +15,8 @@ const blurvar = blur ? 'none' : 'block';
 const background = blur ? 'none' : backgroundimg;
 
 const date = new Date('2023-06-12')
+
+console.log(url)
 ---
 
 <html lang="en">
@@ -26,7 +28,7 @@ const date = new Date('2023-06-12')
     <meta name="description" property="og:description" content={page.description} />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content={url} />
+    <meta property="og:url" content={url ? url : null} />
     <meta property="og:site-name" content="Amity Warme" />
     <meta name="image" property="og:image" content={thumbnail} />
     <meta property="og:image:secure_url" content="https://github.com/connorwarme/pro-site/raw/main/src/images/gallery/a-thumbnail-2.png" />
