--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -1,5 +1,6 @@
 ---
 import BaseLayout from "../../layouts/BaseLayout.astro";
+import tainted from "../../images/gallery/tainted2.jpg"
 
 const allPosts = await Astro.glob('../posts/*.mdx');
 const uniqueTags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
@@ -8,17 +9,42 @@ const pageInfo = {
   title: 'Tags Index',
   description: `Search Amity's blog content by keywords, including: big wall, Yosemite, El Capitan, fueling, nutrition, and more.`
 }
+const img = {
+  url: tainted,
+  position: '60% 100%',
+  alt: 'Amity stemming high above Howe Sound in Squamish, BC'
+}
+const url = "https://amitywarme.com/tags"
 ---
 
-<BaseLayout page={pageInfo}>
-  <h4>Find the tag you'd like to explore!</h4>
-  <div class="tag-index-container">
-    {uniqueTags.map((tag) => (
-      <p class="tag-item"><a href={`/tags/${tag}`}>{tag}</a></p> 
-      ))}
+<BaseLayout page={pageInfo} img={img} url="https://amitywarme.com/tags">
+  <div class="tags-wrapper">
+    <div class="tag-spacer"></div>
+    <div class="tags-container">
+      <h2>Find the tag you'd like to explore!</h2>
+      <div class="tag-index-container">
+        {uniqueTags.map((tag) => (
+          <p class="tag-item"><a href={`/tags/${tag}`}>{tag}</a></p> 
+          ))}
+      </div>
+    </div>
+    <div class="tag-spacer"></div>
   </div>
 </BaseLayout>
 <style>
+  .tags-wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: calc(100vh - 300px);
+  }
+  .tags-container {
+    background-color: rgba(245, 245, 245, 0.6);
+    padding: 1rem;
+    text-align: center;
+  }
+  .tags-container > h2 {
+    color: rgb(64, 64, 64);
+  }
   a {
     color: #00539f;
   }
@@ -26,6 +52,7 @@ const pageInfo = {
     display: flex;
     flex-wrap: wrap;
     margin: 0 auto;
+    justify-content: center;
   }
   .tag-item {
     margin: 0.25em;
@@ -34,5 +61,8 @@ const pageInfo = {
     padding: 0.5em 1em;
     font-size: 1.15em;
     background-color: #f8fcfd;
+  }
+  .tag-spacer {
+    flex-grow: 1;
   }
 </style>
