Minor styling changes to tags collection page

--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -62,6 +62,9 @@ const url = "https://amitywarme.com/tags"
     font-size: 1.15em;
     background-color: #f8fcfd;
   }
+  .tag-item > a {
+    color: rgb(64, 64, 64);
+  }
   .tag-spacer {
     flex-grow: 1;
   }
