Adjust display position on new photos

--- a/src/components/PhotoDisplay.astro
+++ b/src/components/PhotoDisplay.astro
@@ -22,6 +22,8 @@ import arrow from "../images/icons/arrow-custom.png";
 import tainted from "../images/gallery/tainted1.jpg";
 import taintedlove from "../images/gallery/tainted2.jpg";
 import lucy from "../images/gallery/Lucy.jpg"
+import book from "../images/gallery/book2.jpg"
+import bookHate from "../images/gallery/book3.jpg"
 
 const array = [
   {
@@ -78,6 +80,17 @@ const array = [
       site: 'https://www.youtube.com/@v3rtmedia/',
     },
     position: '45% 0%',
+  },
+  {
+    src: book,
+    alt: 'Amity on Book of Hate',
+    caption: 'Book of Hate',
+    location: 'Yosemite',
+    credit: {
+      name: 'Samuel Crossley',
+      site: 'https://samuelcrossley.media/',
+    },
+    position: '29% 0%',
   },
   {
     src: stingray,
@@ -168,6 +181,17 @@ const array = [
     position: '60% 0%',
   },
   {
+    src: bookHate,
+    alt: 'Amity on Book of Hate',
+    caption: 'Book of Hate',
+    location: 'Yosemite',
+    credit: {
+      name: 'Samuel Crossley',
+      site: 'https://samuelcrossley.media/',
+    },
+    position: '55% 0%',
+  },
+  {
     src: guns,
     alt: 'Amity flexing her arms',
     caption: 'Tools of the Trade',
@@ -254,17 +278,6 @@ const array = [
       site: 'https://www.felipesh.com/',
     },
     position: '15%',
-  },
-  {
-    src: rude,
-    alt: 'Amity on Rude Boys',
-    caption: 'Rude Boys',
-    location: `Smith Rock, OR`,
-    credit: {
-      name: 'Simon Carter',
-      site: 'https://www.onsight.com/au/',
-    },
-    position: '75% 60%',
   },
   {
     src: gear,
