--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -21,6 +21,7 @@ const fakeimg = {
       <h1>Reach Out</h1>
       <ContactForm client:load />
     </div>
+    <div class="contact-spacer"></div>
   </div>
 </BaseLayout>
 <style>
@@ -28,6 +29,7 @@ const fakeimg = {
     display: flex;
     flex-direction: column;
     margin: 0;
+    min-height: 66vh;
   }
   .contact-content {
     background-color: rgb(245, 245, 245);
@@ -39,6 +41,9 @@ const fakeimg = {
     grid-template-columns: auto;
     justify-items: center;
     align-items: center;
+  }
+  .contact-spacer {
+    flex-grow: 1;
   }
   img {
     height: 128px;
