Updating img src (v4 tweaks)

--- a/src/components/PhotoDisplay.astro
+++ b/src/components/PhotoDisplay.astro
@@ -27,7 +27,7 @@ import bookHate from "../images/gallery/book3.jpg"
 
 const array = [
   {
-    src: golden,
+    src: golden.src,
     alt: 'Amity on Golden Gate',
     caption: 'The A5 Traverse',
     location: 'El Capitan, Yosemite',
@@ -38,7 +38,7 @@ const array = [
     position: '75%',
   },
   {
-    src: tales,
+    src: tales.src,
     alt: 'Amity on Tales of Power',
     caption: 'Tales of Power',
     location: 'Yosemite',
@@ -49,7 +49,7 @@ const array = [
     position: '50%',
   },
   {
-    src: barnacle,
+    src: barnacle.src,
     alt: 'Amity on Barnacle Scars',
     caption: 'Barnacle Scars',
     location: `Ship's Prow, RMNP`,
@@ -60,7 +60,7 @@ const array = [
     position: '25%',
   },
   {
-    src: taintedlove,
+    src: taintedlove.src,
     alt: 'Amity on Tainted Love',
     caption: 'Tainted Love',
     location: `Squamish, BC`,
@@ -71,7 +71,7 @@ const array = [
     position: '65%',
   },
   {
-    src: jetstream,
+    src: jetstream.src,
     alt: 'Amity on Jet Stream',
     caption: 'Jet Stream',
     location: 'Red Rock, NV',
@@ -82,7 +82,7 @@ const array = [
     position: '45% 0%',
   },
   {
-    src: book,
+    src: book.src,
     alt: 'Amity on Book of Hate',
     caption: 'Book of Hate',
     location: 'Yosemite',
@@ -93,7 +93,7 @@ const array = [
     position: '29% 0%',
   },
   {
-    src: stingray,
+    src: stingray.src,
     alt: 'Amity on Stingray',
     caption: 'Stingray',
     location: `Joshua Tree, CA`,
@@ -104,7 +104,7 @@ const array = [
     position: '80% 5%',
   },
   {
-    src: johnny,
+    src: johnny.src,
     alt: 'Amity on Johnny Lat',
     caption: 'Johnny Lat',
     location: `Turkey Rocks, CO`,
@@ -115,7 +115,7 @@ const array = [
     position: '28%',
   },
   {
-    src: psycho,
+    src: psycho.src,
     alt: 'Amity on Mark of the Beast',
     caption: 'Mark of the Beast',
     location: `Yosemite`,
@@ -126,7 +126,7 @@ const array = [
     position: '55% 0%',
   },
   {
-    src: corazon,
+    src: corazon.src,
     alt: 'Amity on El Corazon',
     caption: 'El Corazon',
     location: `El Capitan, Yosemite`,
@@ -137,7 +137,7 @@ const array = [
     position: '25% 40%',
   },
   {
-    src: lifeline,
+    src: lifeline.src,
     alt: 'Amity on Lifeline',
     caption: 'Lifeline',
     location: `Sedona, AZ`,
@@ -148,7 +148,7 @@ const array = [
     position: '70% 33%',
   },
   {
-    src: lucy,
+    src: lucy.src,
     alt: 'Amity on Lucy the Labrador, high on El Niño',
     caption: 'El Niño',
     location: `El Capitan, Yosemite`,
@@ -159,7 +159,7 @@ const array = [
     position: '37%',
   },
   {
-    src: six,
+    src: six.src,
     alt: 'Amity on Six Star Crack',
     caption: 'Six Star Crack',
     location: `Indian Creek, UT`,
@@ -170,7 +170,7 @@ const array = [
     position: '70%',
   },
   {
-    src: wolverine,
+    src: wolverine.src,
     alt: 'Amity onsighting Wolverine',
     caption: 'Onsighting Wolverine (13-)',
     location: 'The Waterfall, AZ',
@@ -181,7 +181,7 @@ const array = [
     position: '60% 0%',
   },
   {
-    src: bookHate,
+    src: bookHate.src,
     alt: 'Amity on Book of Hate',
     caption: 'Book of Hate',
     location: 'Yosemite',
@@ -192,7 +192,7 @@ const array = [
     position: '55% 0%',
   },
   {
-    src: guns,
+    src: guns.src,
     alt: 'Amity flexing her arms',
     caption: 'Tools of the Trade',
     location: 'Yosemite',
@@ -203,7 +203,7 @@ const array = [
     position: '50%',
   },
   {
-    src: mark,
+    src: mark.src,
     alt: 'Amity on Mark of the Beast',
     caption: 'Mark of the Beast',
     location: `Yosemite`,
@@ -214,7 +214,7 @@ const array = [
     position: '75% 0%',
   },
   {
-    src: tainted,
+    src: tainted.src,
     alt: 'Amity on Tainted Love',
     caption: 'Tainted Love',
     location: `Squamish, BC`,
@@ -225,7 +225,7 @@ const array = [
     position: '83%',
   },
   {
-    src: air,
+    src: air.src,
     alt: 'Amity attempting Air Swedin',
     caption: 'Air Swedin',
     location: 'Indian Creek, UT',
@@ -236,7 +236,7 @@ const array = [
     position: '65% 35%',
   },
   {
-    src: dragon,
+    src: dragon.src,
     alt: 'Amity on Enter the Dragon',
     caption: 'Enter the Dragon',
     location: `The Fins, ID`,
@@ -247,7 +247,7 @@ const array = [
     position: '10% 55%',
   },
   {
-    src: fly,
+    src: fly.src,
     alt: 'Amity on Learning to Fly',
     caption: 'Learning to Fly',
     location: 'Indian Creek, UT',
@@ -258,7 +258,7 @@ const array = [
     position: '40%',
   },
   {
-    src: gate,
+    src: gate.src,
     alt: 'Amity on Golden Gate',
     caption: 'Golden Gate',
     location: `El Capitan, Yosemite`,
@@ -269,7 +269,7 @@ const array = [
     position: '30% 0%',
   },
   {
-    src: monastery,
+    src: monastery.src,
     alt: 'Amity on Psychatomic',
     caption: 'Psychatomic',
     location: `The Monastery, CO`,
@@ -280,7 +280,7 @@ const array = [
     position: '15%',
   },
   {
-    src: gear,
+    src: gear.src,
     alt: 'Amity gearing up in RMNP',
     caption: 'Racking up',
     location: `Chasm Lake, RMNP`,
@@ -295,10 +295,10 @@ const array = [
 <section aria-label="Photo Gallery">
   <div class="gallery" data-gallery>
     <button class="gallery-button prev" data-gallery-button="prev">
-      <img src={arrow} alt="&#8656;">
+      <img src={arrow.src} alt="&#8656;">
     </button>
     <button class="gallery-button next" data-gallery-button="next">
-      <img src={arrow} alt="&#8658;">
+      <img src={arrow.src} alt="&#8658;">
     </button>
     <ul data-slides>
       {array.map((image) => (
