--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,7 +7,7 @@ const pageInfo = {
   description: 'Rock climber and dietitian, Amity is drawn to pushing her limits and empowering others to do the same.',
 }
 const image = {
-  url: barnacle,
+  url: barnacle.src,
   position: '22% top',
   alt: 'Amity on the first ascent of Barnacle Scars in RMNP'
 }
