--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,16 +39,16 @@ const pageInfo = {
   description: "Pro climber with five free ascents of El Capitan and registered dietitian who helps athletes use nutrition to maximize performance and long-term health.",
 }
 const img = {
-  url: golden,
+  url: golden.src,
   position: "75%",
   alt: "Amity on Golden Gate, high on El Capitan"
 }
 
-const arrowVar = `url(${arrowList})`;
-const psychoVar = `url(${psycho})`;
-const turkeyVar = `url(${turkey})`;
-const bookVar = `url(${book})`;
-const markVar = `url(${mark})`;
+const arrowVar = `url(${arrowList.src})`;
+const psychoVar = `url(${psycho.src})`;
+const turkeyVar = `url(${turkey.src})`;
+const bookVar = `url(${book.src})`;
+const markVar = `url(${mark.src})`;
 
 ---
 <BaseLayout page={pageInfo} img={img} url="https://amitywarme.com/"> 
