Updating img src

--- a/src/components/Sponsor.astro
+++ b/src/components/Sponsor.astro
@@ -88,7 +88,7 @@ const sponsors = [
     {sponsors.map((sponsor) => (
       <div class="sponsor-container">
         <a href={sponsor.url} target="_blank">
-          <img src={sponsor.img.url} alt={sponsor.img.alt} height={sponsor.img.size}>
+          <img src={sponsor.img.url.src} alt={sponsor.img.alt} height={sponsor.img.size}>
         </a>
       </div>
       ))}
