--- a/src/pages/athlete.astro
+++ b/src/pages/athlete.astro
@@ -10,7 +10,7 @@ const pageInfo = {
   description: 'Relentlessly pursuing big walls and big goals with tenacity and grit, Amity enjoys the challenge of pushing physical and mental limits in the vertical realm.'
 }
 const image = {
-  url: wolverine,
+  url: wolverine.src,
   position: '60%',
   alt: 'Amity climbing Wolverine, 13a trad, onsight'
 }
@@ -24,7 +24,7 @@ const image = {
     </div>
     <div class="scroll-container">
       <a href="#achievements" aria-label="Link to Achievements">
-        <img class="down-arrow" src={arrow} alt="↓" aria-label="Scroll down">
+        <img class="down-arrow" src={arrow.src} alt="↓" aria-label="Scroll down">
       </a>
       <!-- <span>Scroll Down</span> -->
     </div>
