Fixing img paths

--- a/src/layouts/MdPostLayout.astro
+++ b/src/layouts/MdPostLayout.astro
@@ -17,32 +17,34 @@ import struggle from "../images/posts/struggle.jpg";
 import stingray from "../images/gallery/stingray.jpg";
 import tainted from "../images/gallery/tainted1.jpg";
 import silly from "../images/gallery/silly.jpg";
+import book from "../images/gallery/book1.jpg";
 
 const image = {
-  url: gate,
+  url: gate.src,
   position: "25%",
   alt: 'Amity all smiles on Golden Gate in Yosemite, CA'
 }
 
 const images = [
-  frontier, 
-  fuel,
-  gate,
-  turkey,
-  barnacle,
-  golden,
-  enormo,
+  frontier.src, 
+  fuel.src,
+  gate.src,
+  turkey.src,
+  barnacle.src,
+  golden.src,
+  enormo.src,
   "https://images.squarespace-cdn.com/content/v1/5e12721e9cacc8033cd889f6/34eeccbb-34c1-4c97-ac10-ea96e2fdcfd4/--Episode+Cover.png",
-  banana,
-  blackberry,
-  pudding,
-  zucchini,
-  pumpkin,
-  friad,
-  struggle,
-  stingray,
-  tainted,
-  silly,
+  banana.src,
+  blackberry.src,
+  pudding.src,
+  zucchini.src,
+  pumpkin.src,
+  friad.src,
+  struggle.src,
+  stingray.src,
+  tainted.src,
+  silly.src,
+  book.src,
 ]
 const { frontmatter } = Astro.props;
 
