Add new podcast w/ photo

--- a/src/layouts/MdPostLayout.astro
+++ b/src/layouts/MdPostLayout.astro
@@ -18,6 +18,7 @@ import stingray from "../images/gallery/stingray.jpg";
 import tainted from "../images/gallery/tainted1.jpg";
 import silly from "../images/gallery/silly.jpg";
 import book from "../images/gallery/book1.jpg";
+import struggleA from "../images/posts/struggleAmity.jpg";
 
 const image = {
   url: gate.src,
@@ -45,6 +46,7 @@ const images = [
   tainted.src,
   silly.src,
   book.src,
+  struggleA.src,
 ]
 const { frontmatter } = Astro.props;
 
