Fix image source paths

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,7 +61,7 @@ const markVar = `url(${mark.src})`;
       <div class="home-spacer">
         <div class="scroll-container">
           <a href="#athlete" aria-label="Link to Athlete">
-            <img src={arrow} alt="" aria-label="Scroll Down">
+            <img src={arrow.src} alt="" aria-label="Scroll Down">
           </a>
         </div>
       </div>
@@ -76,7 +76,7 @@ const markVar = `url(${mark.src})`;
           </div>
           <div class="athlete more-wrapper">
             <a href="/athlete">
-              <img src={arrowSimple} alt="↓">
+              <img src={arrowSimple.src} alt="↓">
               <p>View More</p>
             </a>
           </div>
@@ -98,7 +98,7 @@ const markVar = `url(${mark.src})`;
           </ul>
           <div class="dietician more-wrapper">
             <a href="/dietitian">
-              <img src={arrowSimple} alt="↓">
+              <img src={arrowSimple.src} alt="↓">
               <p>Learn More</p>
             </a>
           </div>
