--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -28,7 +28,7 @@ const date = new Date('2023-06-12')
     <meta property="og:type" content="website" />
     <meta property="og:url" content={url ? url : null} />
     <meta property="og:site-name" content="Amity Warme" />
-    <meta name="image" property="og:image" content={thumbnail} />
+    <meta name="image" property="og:image" content={thumbnail.src} />
     <meta property="og:image:secure_url" content="https://github.com/connorwarme/pro-site/raw/main/src/images/gallery/a-thumbnail-2.png" />
     <meta property="og:image-width" content="1200" />
     <meta property="og:image-height" content="627" />
