Fix width for Chrome browsers

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -69,7 +69,10 @@ const image = {
   .about-content {
     background-color: rgba(245, 245, 245, 0.99);
     color: rgb(64, 64, 64);
-    width: 100vw;
+    width: 100%;
+    width: fill-available;
+    width: -moz-available;
+    width: -webkit-fill-available;
     max-width: 575px;
     padding: 0 2rem;
     margin-bottom: 35vh;
