--- a/src/pages/athlete.astro
+++ b/src/pages/athlete.astro
@@ -45,7 +45,10 @@ const image = {
 <style>
   .athlete-spacer {
     height: 88vh;
-    width: 100vw;
+    width: 100%;
+    width: fill-available;
+    width: -moz-available;
+    width: -webkit-fill-available;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
