--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -34,7 +34,10 @@ const fakeimg = {
   .contact-content {
     background-color: rgb(245, 245, 245);
     color: rgb(64,64,64);
-    width: 100vw;
+    width: 100%;
+    width: fill-available;
+    width: -moz-available;
+    width: -webkit-fill-available;
     padding: 1rem 2rem;
     border-radius: 3px;
     display: grid;
