--- a/src/pages/dietitian.astro
+++ b/src/pages/dietitian.astro
@@ -198,7 +198,10 @@ const pageInfo = {
     flex-direction: column;
     color: rgb(64, 64, 64);
     background-color: rgba(245, 245, 245, 0.99);
-    width: 100vw;
+    width: 100%;
+    width: fill-available;
+    width: -moz-available;
+    width: -webkit-fill-available;
     max-width: 595px;
     padding: 0 1.5rem;
     box-shadow: 0 0 3px rgb(64, 64, 64);
