--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -41,7 +41,10 @@ const date = new Date('2023-06-12')
   .gallery-header-wrapper:first-child {
     position: absolute;
     top: 0;
-    width: 100vw;
+    width: 100%;
+    width: fill-available;
+    width: -moz-available;
+    width: -webkit-fill-available;
     z-index: 800;
   }
   @media (hover: none) and (orientation: portrait) {
