Fix width for Chrome browsers

--- a/src/components/Achieve.astro
+++ b/src/components/Achieve.astro
@@ -169,7 +169,10 @@ const singleSport = [
   section {
     margin: 0 0 100px 0;
     padding-top: 1rem;
-    width: 100vw;
+    width: 100%;
+    width: fill-available;
+    width: -moz-available;
+    width: -webkit-fill-available;
     background-color: whitesmoke;
     text-align: center;
   }
