--- a/src/components/PhotoDisplay.astro
+++ b/src/components/PhotoDisplay.astro
@@ -329,7 +329,10 @@ button {
 }
 .gallery {
   height: calc(100vh + 1px);
-  width: 100vw;
+  width: 100%;
+  width: fill-available;
+  width: -moz-available;
+  width: -webkit-fill-available;
   position: relative;
 }
 .gallery-button {
