--- a/src/components/Sponsor.astro
+++ b/src/components/Sponsor.astro
@@ -99,7 +99,10 @@ const sponsors = [
   .sponsors-section {
     background-color: black;
     color: white;
-    width: 100vw;
+    width: 100%;
+    width: fill-available;
+    width: -moz-available;
+    width: -webkit-fill-available;
     text-align: center;
     padding: 4vh 0;
     margin-top: 45vh;
