Address fallout of latest width adjustments

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -95,6 +95,12 @@ const date = new Date('2023-06-12')
       .body-spacer {
         flex-grow: 1;
       }
+      #main {
+        width: 100%;
+        width: fill-available;
+        width: -moz-available;
+        width: -webkit-fill-available;
+      }
       @media (hover: none), (max-width: 769px) {
         body {
           background-image: none;
