--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -85,8 +85,10 @@ const image = {
   h1, h2 {
     width: fit-content;
   }
-  p {
-
+  @media screen and (min-width: 470px) {
+    .about-wrapper {
+      align-items: center;
+    }
   }
   @media screen and (min-width: 770px) {
     h1 {
