Center content, tweak font sizing on dietitian title

--- a/src/pages/content.astro
+++ b/src/pages/content.astro
@@ -43,6 +43,10 @@ const pageInfo = {
   </div>
 </BaseLayout>
 <style>
+  .content-wrapper {
+    display: flex;
+    justify-content: center;
+  }
   .content-title {
     font-family: "Unbound", "Playfair", Georgia, 'Times New Roman', Times, serif;
     width: fit-content;
