Add planet mountain news post

--- a/src/layouts/MdPostLayout.astro
+++ b/src/layouts/MdPostLayout.astro
@@ -19,6 +19,7 @@ import tainted from "../images/gallery/tainted1.jpg";
 import silly from "../images/gallery/silly.jpg";
 import book from "../images/gallery/book1.jpg";
 import struggleA from "../images/posts/struggleAmity.jpg";
+import nino from "../images/gallery/Lucy.jpg";
 
 const image = {
   url: gate.src,
@@ -47,6 +48,7 @@ const images = [
   silly.src,
   book.src,
   struggleA.src,
+  nino.src
 ]
 const { frontmatter } = Astro.props;
 
