Add post- waterfall video from fusis

--- a/src/layouts/MdPostLayout.astro
+++ b/src/layouts/MdPostLayout.astro
@@ -20,6 +20,7 @@ import silly from "../images/gallery/silly.jpg";
 import book from "../images/gallery/book1.jpg";
 import struggleA from "../images/posts/struggleAmity.jpg";
 import nino from "../images/gallery/Lucy.jpg";
+import wolverine from "../images/gallery/Wolverine.Lite.jpg";
 
 const image = {
   url: gate.src,
@@ -48,7 +49,8 @@ const images = [
   silly.src,
   book.src,
   struggleA.src,
-  nino.src
+  nino.src,
+  wolverine.src
 ]
 const { frontmatter } = Astro.props;
 
