Update for Sendero send, remove Lib Crack

--- a/src/components/Achieve.astro
+++ b/src/components/Achieve.astro
@@ -46,6 +46,13 @@ const bigwall = [
   }
 ];
 const multi = [
+{
+    climb: 'Sendero Luminoso',
+    grade: '5.13d',
+    pitches: 13,
+    style: '',
+    location: 'Mount Hooker'
+  },
   {
     climb: 'The Honeymoon is Over',
     grade: '5.13c',
@@ -73,13 +80,6 @@ const multi = [
     pitches: 3,
     style: 'First Ascent',
     location: 'RMNP'
-  },
-  {
-    climb: 'Liberty Crack',
-    grade: '5.13b',
-    pitches: 12,
-    style: '',
-    location: 'North Cascades'
   }
 ];
 const singleTrad = [
