--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -48,7 +48,7 @@ h1 {
   height: 4px;
   margin: 5px 0 5px 0;
   background-color: rgb(64, 64, 64);
-  box-shadow: 0 0 2px rgba(64, 64, 64, 0.5);
+  /* box-shadow: 0 0 2px rgba(64, 64, 64, 0.5); */
   border-radius: 1.5px;
 }
 .mobile-hamburger:hover {
