Begin building video display for book of hate on homepage

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
 import Wall from "../components/Wall.astro";
+import Video from '../components/Video.astro';
 import golden from "../images/gallery/Amity_Goldengate.Lite.jpg";
 import arrow from "../images/icons/arrow-custom.png";
 import arrowSimple from "../images/icons/arrow-simple.svg";
@@ -84,7 +85,8 @@ const markVar = `url(${mark.src})`;
         <div class="athlete-img-container" role="img" aria-label="Amity climbing high above the Valley floor on El Corazon"></div>
       </div>
     </div>
-    <div class="bg-img1" role="img" aria-label="Amity in the thin-crack crux of Mark of the Beast in Yosemite, CA"></div>
+    <Video />
+    <!-- <div class="bg-img1" role="img" aria-label="Amity in the thin-crack crux of Mark of the Beast in Yosemite, CA"></div> -->
     <div class="home-dietician-wrapper">
       <div class="home-dietician-content">
         <div class="dietician-content-simple">
